Forbid setting responseType on all sync XHRs.
Rather than only doing it for http(s) URLs. This matches the XHR2 spec and
Firefox. This also avoids having to support the downloadToFile + synchronous
load combination in the resource loader stack.

Update tests according and add an assertion.

BUG=354188

Review URL: https://codereview.chromium.org/206223005

git-svn-id: svn://svn.chromium.org/blink/trunk@169702 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/events/event-on-xhr-document.html
+++ b/LayoutTests/fast/events/event-on-xhr-document.html
@@ -31,16 +31,22 @@ function testEventsFiredOn(doc)
     shouldBe("window.caughtFoo", "[]");
 }
 
+window.jsTestIsAsync = true;
+
 var xhrForXML = new XMLHttpRequest();
 xhrForXML.open("GET", "resources/hello-xhr-event.xml", false);
 xhrForXML.send();
 testEventsFiredOn(xhrForXML.responseXML);
 
+// Must run asynchronous to use responseType.
 var xhrForHTML = new XMLHttpRequest();
-xhrForHTML.open("GET", "resources/hello-xhr-event.html", false);
+xhrForHTML.open("GET", "resources/hello-xhr-event.html", true);
 xhrForHTML.responseType = "document";
+xhrForHTML.onload = function() {
+    testEventsFiredOn(xhrForHTML.response);
+    finishJSTest();
+};
 xhrForHTML.send();
-testEventsFiredOn(xhrForHTML.response);
 
 </script>
 </body>
