--- a/LayoutTests/fast/xmlhttprequest/xmlhttprequest-responsetype-before-open-sync-request.html
+++ b/LayoutTests/fast/xmlhttprequest/xmlhttprequest-responsetype-before-open-sync-request.html
@@ -20,8 +20,7 @@
         shouldBeEqualToString('window.location.protocol', 'file:');
         xhr = new XMLHttpRequest();
         evalAndLog("xhr.responseType = 'document';");
-        evalAndLog("xhr.open('GET', window.location.href, false);");
-        shouldBeEqualToString('xhr.responseType', 'document');
+        shouldThrow("xhr.open('GET', window.location.href, false);");
 
         // DATA
         var dataUrl = 'data:text/html;charset=utf-8,%3C%21DOCTYPE%20' +
@@ -31,8 +30,7 @@
                       '%3C%2Fhtml%3E%0A%0D%0A';
         xhr = new XMLHttpRequest();
         evalAndLog("xhr.responseType = 'document';");
-        evalAndLog("xhr.open('GET', dataUrl, false);");
-        shouldBeEqualToString('xhr.responseType', 'document');
+        shouldThrow("xhr.open('GET', dataUrl, false);");
     </script>
 </head>
 <body>
