Increase timeout on slow encrypted-media layout tests
The default timeout for tests using the w3c test harness is 2 seconds.
For several of these tests that play a little bit of video, this is not
long enough, especially when running using slower builds (like ASAN).
Setting the timeouts to a large value (60s) for both per-test time and
entire test time so that the infrastructure timeouts will be used.

BUG=353770, 353792
TEST=layout tests pass repeatedly using ASAN build

Review URL: https://codereview.chromium.org/205143002

git-svn-id: svn://svn.chromium.org/blink/trunk@169712 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/media/encrypted-media/encrypted-media-istypesupported.html
+++ b/LayoutTests/media/encrypted-media/encrypted-media-istypesupported.html
@@ -8,6 +8,9 @@
     <body>
         <div id="log"></div>
         <script>
+            // Timeout for all tests to run.
+            setup({ timeout: 60000 });
+
             // Generate a distinct test for each type in |types|.
             function test_type_support(types, expectation, description)
             {
@@ -18,7 +21,8 @@
                         assert_true(type.length == 1 || type.length == 2);
                         assert_equals(MediaKeys.isTypeSupported.apply(
                             this, type), expectation, 'isTypeSupported');
-                    },  description + ": '" + type.join("', '") + "'");
+                    },  description + ": '" + type.join("', '") + "'",
+                    { timeout: 60000 });
                 }
             };
 
