--- a/LayoutTests/media/encrypted-media/encrypted-media-v2-syntax.html
+++ b/LayoutTests/media/encrypted-media/encrypted-media-v2-syntax.html
@@ -14,6 +14,9 @@
             var mediaKeySession = null;
             var initData = stringToUint8Array('init data');
 
+            // Timeout for all tests to run.
+            setup({ timeout: 60000 });
+
             test(function()
             {
                 // Too few parameters.
@@ -26,7 +29,7 @@
                 assert_throws('NOT_SUPPORTED_ERR', function() { new MediaKeys('unsupported'); });
                 assert_throws('NOT_SUPPORTED_ERR', function() { new MediaKeys(1); });
                 assert_throws('NOT_SUPPORTED_ERR', function() { new MediaKeys(new Uint8Array(0)); });
-            }, 'Test MediaKeys constructor exceptions.');
+            }, 'Test MediaKeys constructor exceptions.', { timeout: 60000 });
 
             test(function()
             {
@@ -38,7 +41,7 @@
                 assert_equals(mediaKeys.keySystem, 'org.w3.clearkey');
                 assert_equals(typeof mediaKeys.createSession, 'function');
                 assert_equals(typeof mediaKeys.addEventListener, 'undefined');
-            }, 'Test MediaKeys constructor.');
+            }, 'Test MediaKeys constructor.', { timeout: 60000 });
 
             test(function()
             {
@@ -65,7 +68,7 @@
                 assert_throws('NotSupportedError', function() { mediaKeys.createSession('unsupported', initData); });
                 assert_throws('NotSupportedError', function() { mediaKeys.createSession('video/foo', initData); });
                 assert_throws('NotSupportedError', function() { mediaKeys.createSession('text/webm', initData); });
-            }, 'Test MediaKeys createSession() exceptions.');
+            }, 'Test MediaKeys createSession() exceptions.', { timeout: 60000 });
 
             test(function()
             {
@@ -82,7 +85,7 @@
                 assert_equals(typeof mediaKeySession.onmessage, 'undefined');
                 assert_equals(typeof mediaKeySession.onclose, 'undefined');
                 assert_equals(typeof mediaKeySession.onerror, 'undefined');
-            }, 'Test MediaKeys createSession().');
+            }, 'Test MediaKeys createSession().', { timeout: 60000 });
 
             test(function()
             {
@@ -94,20 +97,20 @@
                 assert_throws('InvalidAccessError', function() { mediaKeySession.update(undefined); });
                 assert_throws('InvalidAccessError', function() { mediaKeySession.update(1); });
                 assert_throws('InvalidAccessError', function() { mediaKeySession.update(new Uint8Array(0)); });
-            }, 'Test MediaKeySession update() exceptions.');
+            }, 'Test MediaKeySession update() exceptions.', { timeout: 60000 });
 
             test(function()
             {
                 mediaKeySession.update(new Uint8Array(1), 'extra');
                 mediaKeySession.update(new Uint8Array(1));
-            }, 'Test MediaKeySession update().');
+            }, 'Test MediaKeySession update().', { timeout: 60000 });
 
             test(function()
             {
                 mediaKeySession.release();
                 // FIXME: This causes Chromium to crash. Uncomment this once Chromium is fixed.
                 // mediaKeySession.release('extra');
-            }, 'Test MediaKeySession release().');
+            }, 'Test MediaKeySession release().', { timeout: 60000 });
 
             // FIXME: Add syntax checks for MediaKeys.IsTypeSupported().
             // FIXME: Add syntax checks for MediaKeyError and MediaKeySession events.
