Rip out Settings::fixedPositionCreatesStackingContext
We always turn this setting on.

BUG=354688
R=ojan@chromium.org

Review URL: https://codereview.chromium.org/206463009

git-svn-id: svn://svn.chromium.org/blink/trunk@169714 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/compositing/iframes/fixed-position-element-in-iframe-enters-viewport.html
+++ b/LayoutTests/compositing/iframes/fixed-position-element-in-iframe-enters-viewport.html
@@ -20,10 +20,8 @@ If this test passes, you should see a green square.
         if (window.testRunner)
             testRunner.waitUntilDone();
 
-        if (window.internals) {
+        if (window.internals)
             window.internals.settings.setAcceleratedCompositingForFixedPositionEnabled(true);
-            window.internals.settings.setFixedPositionCreatesStackingContext(true);
-        }
 
         function runTest()
         {
