--- a/LayoutTests/compositing/geometry/fixed-position-composited-page-scale-smaller-than-viewport.html
+++ b/LayoutTests/compositing/geometry/fixed-position-composited-page-scale-smaller-than-viewport.html
@@ -24,11 +24,9 @@
   }
 </style>
 <script>
-  if (window.internals && window.eventSender) {
+  if (window.internals && window.eventSender)
     window.internals.settings.setAcceleratedCompositingForFixedPositionEnabled(true);
-    window.internals.settings.setFixedPositionCreatesStackingContext(true);
     window.eventSender.setPageScaleFactor(0.5, 0, 0);
-  }
 </script>
 </head>
 <body>
