Make WebMIDI use blink Promise.
Use Blink Promise instead of MIDIAccessPromise.
BUG=320984
R=toyoshim@chromium.org

Review URL: https://codereview.chromium.org/77773003

git-svn-id: svn://svn.chromium.org/blink/trunk@169727 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/webmidi/permission.html
+++ b/LayoutTests/webmidi/permission.html
@@ -20,7 +20,7 @@ var finishSuccessfully = function () {
 
 var rejectSysEx = function (next) {
     testRunner.setMIDISysExPermission(false);
-    shouldNotThrow("promise = navigator.requestMIDIAccess({sysex: true})");
+    promise = navigator.requestMIDIAccess({sysex: true});
     shouldBeDefined("promise");
     shouldBeDefined("promise.then");
     promise.then(function(access) {
@@ -37,7 +37,7 @@ var rejectSysEx = function (next) {
 
 var acceptSysEx = function (next) {
     testRunner.setMIDISysExPermission(true);
-    shouldNotThrow("promise = navigator.requestMIDIAccess({sysex: true})");
+    promise = navigator.requestMIDIAccess({sysex: true});
     shouldBeDefined("promise");
     shouldBeDefined("promise.then");
     promise.then(function(access) {
