Compute style-determined compositing reasons during recalc style
There's no need to constantly recompute this data. It's
already determined by the style information, so we might as
well just compute it once during style recalc.

Note: We're still computing all the direct compositing
reasons during style recalc (via updateLayerCompositingState in RenderLayer::styleChanged), but now we skip recomputing
the style determined reasons again when updating layout
and compositing. ASSERTs verify that we get the same answer
as before.

This CL reduces the amount of time spent in the compositing
update for dragging the drawer in the Polymer calculator by
3%.

Review URL: https://codereview.chromium.org/207513002

git-svn-id: svn://svn.chromium.org/blink/trunk@169766 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/compositing/will-change/gpu-rasterization-hint.html
+++ b/LayoutTests/compositing/will-change/gpu-rasterization-hint.html
@@ -79,8 +79,11 @@
   </style>
 
   <script>
-    if (window.internals)
+    if (window.internals) {
       window.internals.settings.setAcceleratedCompositingForGpuRasterizationHintEnabled(true);
+      // Force an update of the compositing triggers.
+      window.internals.layerTreeAsText(document);
+    }
 
     if (window.testRunner) {
       testRunner.dumpAsText();
