--- a/LayoutTests/animations/interpolation/sample-interpolation-reftest-expected.html
+++ b/LayoutTests/animations/interpolation/sample-interpolation-reftest-expected.html
@@ -10,11 +10,23 @@
 </style>
 </head>
 <body>
-<div class="target" id="test0" style="opacity: 0;"></div>
-<div class="target" id="test1" style="opacity: 0;"></div>
-<div class="target" id="test2" style="opacity: 0.3;"></div>
-<div class="target" id="test3" style="opacity: 0.6;"></div>
-<div class="target" id="test4" style="opacity: 0.9999;"></div>
-<div class="target" id="test5" style="opacity: 0.9999;"></div>
+<div>
+  CSS Animations:<br>
+  <div class="target" id="test0" style="opacity: 0;"></div>
+  <div class="target" id="test1" style="opacity: 0;"></div>
+  <div class="target" id="test2" style="opacity: 0.3;"></div>
+  <div class="target" id="test3" style="opacity: 0.6;"></div>
+  <div class="target" id="test4" style="opacity: 0.9999;"></div>
+  <div class="target" id="test5" style="opacity: 0.9999;"></div>
+</div>
+<div>
+  Web Animations API:<br>
+  <div class="target" id="test6" style="opacity: 0;"></div>
+  <div class="target" id="test7" style="opacity: 0;"></div>
+  <div class="target" id="test8" style="opacity: 0.3;"></div>
+  <div class="target" id="test9" style="opacity: 0.6;"></div>
+  <div class="target" id="test10" style="opacity: 0.9999;"></div>
+  <div class="target" id="test11" style="opacity: 0.9999;"></div>
+</div>
 </body>
 </html>
