--- a/LayoutTests/animations/interpolation/sample-interpolation-template-reftest-expected.html
+++ b/LayoutTests/animations/interpolation/sample-interpolation-template-reftest-expected.html
@@ -7,12 +7,22 @@
 }
 </style>
 <template id="target-template">Text</template>
-
-<div class="target" id="test0" style="-webkit-transform: matrix(0.5877852522924734, -0.8090169943749472, 0.8090169943749472, 0.5877852522924734, 0, 0);">Text</div>
-<div class="target" id="test1" style="-webkit-transform: matrix(1, 0, 0, 1, 0, 0);">Text</div>
-<div class="target" id="test2" style="-webkit-transform: matrix(0.5877852522924731, 0.8090169943749475, -0.8090169943749475, 0.5877852522924731, 0, 0);">Text</div>
-<div class="target" id="test3" style="-webkit-transform: matrix(-0.30901699437494734, 0.9510565162951536, -0.9510565162951536, -0.30901699437494734, 0, 0);">Text</div>
-<div class="target" id="test4" style="-webkit-transform: matrix(-1, 0.00000000000000012246467991473532, -0.00000000000000012246467991473532, -1, 0, 0);">Text</div>
-<div class="target" id="test5" style="-webkit-transform: matrix(0.0000000000000007044813998280222, -1, 1, 0.0000000000000007044813998280222, 0, 0);">Text</div>
-
+<div>
+  CSS Animations:<br>
+  <div class="target" id="test0" style="color: rgb(255, 0, 0);">Text</div>
+  <div class="target" id="test1" style="color: rgb(255, 0, 0);">Text</div>
+  <div class="target" id="test2" style="color: rgb(179, 38, 0);">Text</div>
+  <div class="target" id="test3" style="color: rgb(102, 77, 0);">Text</div>
+  <div class="target" id="test4" style="color: rgb(0, 128, 0);">Text</div>
+  <div class="target" id="test5" style="color: rgb(0, 192, 0);">Text</div>
+</div>
+<div>
+  Web Animations API:<br>
+  <div class="target" id="test0" style="color: rgb(255, 0, 0);">Text</div>
+  <div class="target" id="test1" style="color: rgb(255, 0, 0);">Text</div>
+  <div class="target" id="test2" style="color: rgb(179, 38, 0);">Text</div>
+  <div class="target" id="test3" style="color: rgb(102, 77, 0);">Text</div>
+  <div class="target" id="test4" style="color: rgb(0, 128, 0);">Text</div>
+  <div class="target" id="test5" style="color: rgb(0, 192, 0);">Text</div>
+</div>
 </body></html>
